[package]
name = "kad"
version = "0.1.0"
authors = ["Frost Red <frostredlee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libzmq = "0.2"
bincode = "1.2"

[[bin]]
name = "kad_node"
path = "src/bin/node.rs"